flaskdep/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress2
  annotations:
    #kubernetes.io/ingress.regional-static-ip-name: "ingress2"
    kubernetes.io/ingress.class: "gce-internal"
spec:
  # ingressClassName: gce-internal
  rules:
  - host: signup.nwc3.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: flasksvc3
            port:
              number: 80
